# sparc-energy

./: .gitignore  .vercelignore  README.md  about.html  auth.html  carbon_101.html  dashboard.html  fix_build.ps1  hiring.html  index.html  kyc.html  marketplace.html  package.json  privacy.html  professionals.html  projects.html  seed_production.py  supabase_config.md  terms.html  vercel.json  wallet.html
backend/: .dockerignore  Cargo.toml  Dockerfile  Shuttle.toml  build_errors.txt  rewrite_pool.py  rewrite_queries.py
backend/build_dist/debug/.fingerprint/find-msvc-tools-48a2c1d1d39bee89/: output-lib-find_msvc_tools
backend/build_dist/debug/.fingerprint/getrandom-106ac132bf4366a8/: lib-getrandom
backend/build_dist/debug/.fingerprint/getrandom-c6d820c12e9b5674/: build-script-build-script-build  build-script-build-script-build.json
backend/build_dist/debug/.fingerprint/jobserver-90205eeb0cdadf68/: lib-jobserver
backend/build_dist/debug/.fingerprint/pin-project-lite-53ba8b2f4c52301c/: lib-pin_project_lite.json
backend/build_dist/debug/.fingerprint/proc-macro2-0d453ed1ede8acff/: run-build-script-build-script-build.json
backend/build_dist/debug/.fingerprint/version_check-97d031e59f70f618/: lib-version_check
backend/migrations/: 001_init.sql  002_services.sql  oracle_schema.sql
backend/src/: auth.rs  db.rs  main.rs  models.rs  storage.rs
backend/src/engine/: matching.rs
backend/src/handlers/: admin.rs  auth.rs  credits.rs  dashboard.rs  market.rs  mod.rs  projects.rs  services.rs
backend/target_fresh/debug/.fingerprint/cc-e43773b55b21e82d/: lib-cc.json
(+68 files in other folders)
