[package]
name = "carbon-credit-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "carbon-credit-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
thiserror = "1"
validator = { version = "0.18", features = ["derive"] }
